lib/velosilexer/tests/vrs/lex_04_comments_fail_expect.txt
error: unclosed block comment.
     --> tests/vrs/lex_04_comments_fail.vrs:3:1
      |
    3 |  /*
      |  ^^ insert `*/` here to close the block comment.
